# T2DEngine

./: .gitignore  LICENSE  README.md
2d_engine/source/: CMakeLists.txt
2d_engine/source/cgm-2.0/source/: CMakeLists.txt
2d_engine/source/cgm-2.0/source/src/: mat4.cpp  mat4.hpp  matrix_transform.cpp  matrix_transform.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp
2d_engine/source/game_object_model/source/: CMakeLists.txt
2d_engine/source/game_object_model/source/src/: Actor.cpp  Actor.hpp  Creator.hpp  Game_object.cpp  Game_object.hpp  Game_object_manager.cpp  Game_object_manager.hpp  Gameplay_state.hpp  Projectile.cpp  Projectile.hpp  Projectile_manager.cpp  Projectile_manager.hpp  Ren_coll_game_object.hpp  Renderable_game_object.cpp  Renderable_game_object.hpp
2d_engine/source/game_utility/source/: CMakeLists.txt
2d_engine/source/game_utility/source/cmake/: FindGLEW.cmake
2d_engine/source/game_utility/source/src/: Pool_allocator.cpp  Pool_allocator.hpp  Rect.hpp  memory_allocator.cpp  memory_allocator.hpp  string_id.cpp  string_id.hpp
2d_engine/source/gfx/source/: CMakeLists.txt
2d_engine/source/gfx/source/src/: Animation.hpp  Animation_player.cpp  Animation_player.hpp  Animation_state.cpp  Animation_state.hpp  Animator_controller.cpp  Animator_controller.hpp  Animator_controller_parameter.cpp  Animator_controller_parameter.hpp  Animator_state.hpp  Animator_state_transition.cpp  Animator_state_transition.hpp  Bool_condition.hpp  Camera_2d.cpp  Camera_2d.hpp  Condition.hpp  Graphics_manager.cpp  Graphics_manager.hpp  Int_condition.cpp  Shader.cpp  Shader.hpp  Shader_manager.cpp  Shader_manager.hpp  Sprite.cpp  Sprite.hpp  Sprite_atlas.cpp  Sprite_atlas.hpp  Sprite_atlas_manager.cpp  Sprite_atlas_manager.hpp  Sprite_batch.cpp  Sprite_batch.hpp  Texture_2d.cpp  Texture_2d.hpp  Texture_2d_manager.cpp  Transition.hpp  (+2 more)
2d_engine/source/io/source/: CMakeLists.txt
2d_engine/source/math/source/: CMakeLists.txt
2d_engine/source/mem/source/: CMakeLists.txt
2d_engine/source/phy_2d/source/: CMakeLists.txt
2d_engine/source/rms/source/: CMakeLists.txt
2d_engine/source/src/: Engine.cpp  Engine.hpp  Systems.cpp  Systems.hpp
2d_engine/source/sys/source/: CMakeLists.txt
2d_engine/source/tgs/source/: CMakeLists.txt
2d_engine/source/tmap/source/: CMakeLists.txt
2d_engine/source/utility/source/: CMakeLists.txt
2d_game/source/: CMakeLists.txt
2d_game/source/cmake/: FindGLEW.cmake
2d_game/source/shaders/: vertex.vert
2d_game/source/src/: Game_coll_listener.cpp  Game_coll_listener.hpp  Player.cpp  Player.hpp  Player_climbing_state.cpp  Player_climbing_state.hpp  Player_creator.cpp  Player_creator.hpp  Player_ducking_state.cpp  Player_ducking_state.hpp  Player_idle_state.cpp  Player_idle_state.hpp  Player_jumping_state.cpp  Player_jumping_state.hpp  Player_running_state.cpp  Player_running_state.hpp  Projectile_creator.cpp  Projectile_creator.hpp  game.cpp
2d_platformer/source/: CMakeLists.txt
2d_platformer/source/shaders/: fragment.frag  vertex.vert
2d_platformer/source/src/: AABB_2d.hpp  Actor.cpp  Actor.hpp  Animation_player.cpp  Animation_player.hpp  Animation_state.hpp  Animator_controller.cpp  Animator_controller.hpp  Body_2d.cpp  Body_2d.hpp  Bool_condition.hpp  Button.hpp  Command.hpp  Condition.hpp  Game_coll_listener.hpp  Game_object.hpp  Gameplay_state.hpp  Input_handler.cpp  Input_handler.hpp  Input_manager.cpp  Input_manager.hpp  Int_condition.cpp  Int_condition.hpp  Move_down_command.hpp  Move_left_command.hpp  Move_right_command.hpp  Move_up_command.hpp  Physics_manager.hpp  Player.cpp  Player.hpp  Player_climbing_state.cpp  Player_climbing_state.hpp  Player_idle_state.cpp  Player_idle_state.hpp  Player_jumping_state.cpp  Player_jumping_state.hpp  Player_running_state.cpp  Player_running_state.hpp  Ren_coll_game_object.hpp  Renderable_game_object.hpp  (+30 more)
Fps_demo/source/: CMakeLists.txt
Fps_demo/source/src/: fps.cpp  fps.hpp
cgm-2.0/source/: CMakeLists.txt
cgm-2.0/source/src/: Transform.hpp  mat4.cpp  mat4.hpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.hpp
engine/source/: CMakeLists.txt
engine/source/cmake/: preprocessor.cmake  util.cmake
engine/source/game_object_model/source/: CMakeLists.txt
engine/source/gfx/source/: CMakeLists.txt
engine/source/gom/source/: CMakeLists.txt
engine/source/io/source/: CMakeLists.txt
engine/source/level_management/source/: CMakeLists.txt
engine/source/math/source/: CMakeLists.txt
engine/source/phy_2d/source/: CMakeLists.txt
engine/source/rms/source/: CMakeLists.txt
engine/source/sid_preprocessor/source/: CMakeLists.txt
engine/source/src/: Engine_collision_listener.cpp  Engine_collision_listener.hpp  engine.cpp  engine.hpp
engine/source/tmap/source/: CMakeLists.txt
engine/source/ui/source/: CMakeLists.txt
engine/source/utility/source/: CMakeLists.txt
engine_test/source/: CMakeLists.txt
engine_test/source/src/: test.cpp  test.hpp
game/source/: CMakeLists.txt
game/source/src/: Abstract_game_actions_index.hpp  Damage_region.cpp  Damage_region.hpp  Damage_region_creator.cpp  Damage_region_creator.hpp  Game_coll_listener.cpp  Game_coll_listener.hpp  Hover_robot.cpp  Hover_robot.hpp  Hover_robot_creator.cpp  Hover_robot_creator.hpp  Level_ui_creator.cpp  Level_ui_creator.hpp  Main_menu_canvas.cpp  Main_menu_canvas.hpp  Main_menu_creator.cpp  Main_menu_creator.hpp  Pause_text.cpp  Pause_text.hpp  Player.cpp  Player.hpp  Player_climbing_state.cpp  Player_climbing_state.hpp  Player_creator.cpp  Player_creator.hpp  Player_ducking_state.cpp  Player_ducking_state.hpp  Player_idle_state.cpp  Player_idle_state.hpp  Player_jumping_state.cpp  Player_jumping_state.hpp  Player_running_state.cpp  Player_running_state.hpp  Player_taking_hit_state.cpp  Player_taking_hit_state.hpp  Projectile_creator.cpp  Projectile_creator.hpp  game.cpp  game.hpp
game_utility/source/: CMakeLists.txt
game_utility/source/src/: Timer.cpp  Timer.hpp
sgs/source/: CMakeLists.txt
sgs/source/src/: Animation.hpp  Animation_state.cpp  Bool_condition.hpp  Rect.hpp  Sprite_atlas_manager.hpp  Texture_2d.hpp  Transition.cpp
(+245 files in other folders)
