CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

Project(engine)

#Using c++11
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#UTILITY
FIND_LIBRARY(GAME_UTILITY_LIBRARY GAME_UTILITY)
FIND_PATH(GAME_UTILITY_INCLUDE_DIR Timer.h)

#GRAPHICS_SYSTEM

#PHYSISCS_SYSTEM

INCLUDE_DIRECTORIES( ${GAME_UTILITY_INCLUDE_DIR})

SET(INCLUDE_FILES src/engine.hpp)
SET(SOURCE_FILES  src/engine.cpp)

ADD_LIBRARY(engine STATIC ${INCLUDE_FILES} ${SOURCE_FILES})
