CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

Project(engine)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

#Using c++11
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FIND_PACKAGE(glfw3 3.2 REQUIRED)
FIND_PACKAGE(OpenGL    REQUIRED)
FIND_PACKAGE(GLEW      REQUIRED)

#SOIL
FIND_PATH(SOIL_INCLUDE_DIR NAMES SOIL.h HINTS ${CMAKE_CURRENT_LIST_DIR}/Simple\ OpenGL\ Image\ Library/src)

#GRAPHICS_SYSTEM
FIND_PATH(GFX_INCLUDE_DIR NAMES texture_2d.hpp HINTS ${CMAKE_CURRENT_LIST_DIR}/gfx/source/src)

#G_UTILITY
FIND_PATH(G_UTILITY_INCLUDE_DIR NAMES Timer.hpp HINTS ${CMAKE_CURRENT_LIST_DIR}/game_utility/source/src )

#CGM(MATH)
FIND_PATH(CGM-2.0_INCLUDE_DIR NAMES vec2.hpp HINTS ${CMAKE_CURRENT_LIST_DIR}/cgm-2.0/source/src)

#INPUT SYSTEM
FIND_PATH(IO_INCLUDE_DIR NAMES Button.hpp HINTS ${CMAKE_CURRENT_LIST_DIR}/io/source/src)

#TILE MAP
FIND_PATH(TMAP_INCLUDE_DIR NAMES Tile.hpp HINTS ${CMAKE_CURRENT_LIST_DIR}/tmap/source/src)

#PHYSISCS_SYSTEM
FIND_PATH(PHY_2D_INCLUDE_DIR NAMES Body_2d.hpp HINTS ${CMAKE_CURRENT_LIST_DIR}/phy_2d/source/src)

#GAME OBJECT MODEL
FIND_PATH(GOM_INCLUDE_DIR NAMES game_object.hpp HINTS ${CMAKE_CURRENT_LIST_DIR}/game_object_model/source/src)

ADD_SUBDIRECTORY(cgm-2.0/source)
ADD_SUBDIRECTORY(game_utility/source)
ADD_SUBDIRECTORY(io/source)
ADD_SUBDIRECTORY(gfx/source)
ADD_SUBDIRECTORY(tmap/source)
ADD_SUBDIRECTORY(phy_2d/source)
ADD_SUBDIRECTORY(game_object_model/source)

SET(INCLUDE_FILES src/engine.hpp)
SET(SOURCE_FILES  src/engine.cpp)

ADD_LIBRARY(engine ${INCLUDE_FILES} ${SOURCE_FILES} $<TARGET_OBJECTS:gfx> $<TARGET_OBJECTS:cgm-2.0> $<TARGET_OBJECTS:io> $<TARGET_OBJECTS:g_utility> $<TARGET_OBJECTS:tmap> $<TARGET_OBJECTS:phy_2d> $<TARGET_OBJECTS:gom>)
TARGET_INCLUDE_DIRECTORIES( engine PUBLIC ${GLFW3_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR} ${GFX_INCLUDE_DIR} ${CGM-2.0_INCLUDE_DIR} ${IO_INCLUDE_DIR} ${G_UTILITY_INCLUDE_DIR} ${TMAP_INCLUDE_DIR} ${PHY_2D_INCLUDE_DIR} ${GOM_INCLUDE_DIR} )

