CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

PROJECT(Fps)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

#Using c++11
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FIND_PACKAGE(glfw3 3.2  REQUIRED)
FIND_PACKAGE(OpenGL 	REQUIRED)
FIND_PACKAGE(GLEW   	REQUIRED)

INCLUDE_DIRECTORIES( ${GLFW3_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})

SET(INCLUDE_FILES src/fps.hpp)
SET(SOURCE_FILES src/fps.cpp)

ADD_EXECUTABLE(Fps ${INCLUDE_FILES} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(Fps  ${GLFW3_LIBRARY} ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARY})
