CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

Project(engine_test)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

#Using c++11
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#G_UTILITY
FIND_PATH(G_UTILITY_INCLUDE_DIR NAMES Timer.hpp HINTS ${CMAKE_CURRENT_LIST_DIR}/../../2d_engine/source/game_utility/source/src )

#ENGINE
FIND_LIBRARY(ENGINE_LIBRARY engine)
FIND_PATH(ENGINE_INCLUDE_DIR Engine.hpp)

SET(INCLUDE_FILES src/test.hpp)
SET(SOURCE_FILES src/test.cpp )

ADD_EXECUTABLE(engine_test ${INCLUDE_FILES} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(engine_test ${ENGINE_LIBRARY} )
TARGET_INCLUDE_DIRECTORIES(engine_test PUBLIC ${G_UTILITY_INCLUDE_DIR} ${ENGINE_INCLUDE_DIR})
