CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

Project(sys)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

#Using c++11
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET(INCLUDE_FILES  src/Systems.hpp)
SET(SOURCE_FILES  src/Systems.cpp)


ADD_LIBRARY(sys OBJECT ${INCLUDE_FILES} ${SOURCE_FILES})
TARGET_INCLUDE_DIRECTORIES( sys PUBLIC ${MATH_INCLUDE_DIR} ${GFX_INCLUDE_DIR} ${PHY_2D_INCLUDE_DIR} ${G_UTILITY_INCLUDE_DIR} ${IO_INCLUDE_DIR} ${TMAP_INCLUDE_DIR} )
